Fix name spacing for Viso view CSS files

--- a/public/stylesheets/image/slugs.css
+++ b/public/stylesheets/image/slugs.css
@@ -39,125 +39,17 @@ body {
 }
 /* ------------------------------------------- */
 
-/* section: download
----------------------------------------------- */
-#download {
-  background: #e6eaef;
-}
-
-#download #wrapper {
-  margin: 150px auto;
-  width: 450px;
-}
-
-#download #header {
-  margin: 0 0 14px 0; /* 15px - 1px white drop-shadow */
-  padding: 0 15px;
-}
-
-#download #header h2 a {
-  background: url("/images/logo.png") no-repeat;
-  display: block;
-  height: 25px;
-  text-indent: -99999em;
-  width: 148px;
-}
-
-/* todo: define a:hover for logo */
-
-#download #header p {
-  color: #a3a7ae;
-  font-size: 14px;
-  font-weight: bold;
-  line-height: 25px; /* height of logo without drop-shadow */
-  text-shadow: 0 1px 1px #fff;
-}
-
-#download #container {
-  background: #fff;
-  border: 1px solid #ced2d8;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  border-radius: 5px;
-  font-size: 14px;
-  margin: 0 0 15px 0;
-  padding: 14px; /* 15px - 1px border */
-}
-
-#download #container .item {
-  background: #f4f5f6;
-  border: 1px solid #cdcdcd;
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-  padding: 20px 20px 18px 20px;
-}
-
-#download #container .item .description {
-  background-image: url("/images/item_types/unknown.png");
-  background-position: left center;
-  background-repeat: no-repeat;
-  font-weight: normal;
-  line-height: 22px;
-  padding: 0 0 0 24px;
-}
-
-#download #container .item .image {
-  background-image: url("/images/item_types/image.png");
-}
-
-#download #container .item .bookmark {
-  background-image: url("/images/item_types/bookmark.png");  
-}
-
-#download #container .item .text {
-  background-image: url("/images/item_types/text.png");
-}
-
-#download #container .item .archive {
-  background-image: url("/images/item_types/archive.png");
-}
-
-#download #container .item .audio {
-  background-image: url("/images/item_types/audio.png");
-}
-
-#download #container .item .video {
-  background-image: url("/images/item_types/video.png");
-}
-
-#download #container .item .unknown {
-  background-image: url("/images/item_types/unknown.png");
-}
-
-#download #container .item .download a {
-  background: url("/images/download_button.png") no-repeat;
-  display: block;
-  height: 24px;
-  text-indent: -99999em;
-  width: 75px;
-}
-
-#download #container .item .download a:hover {
-  background-position: 0 -24px;
-}
-
-#download #container .item .download a:active {
-  background-position: 0 -48px;
-}
-/* ------------------------------------------- */
-
 /* section: embedded
 ---------------------------------------------- */
-#embedded {
+#image {
   background: url("/images/embedded_bg.png") repeat #27282c;
 }
 
-#embedded #container {
+#image #container {
   margin: 10px;
 }
 
-#embedded #toolbar {
+#image #toolbar {
   background: url("/images/embedded_toolbar_bg.png") repeat-x;
   bottom: -33px;
   color: #4b4c4f;
@@ -172,12 +64,12 @@ body {
   z-index: 9999;
 }
 
-#embedded #toolbar #logo {
+#image #toolbar #logo {
   float: left;
   margin: 3px 10px 0 10px;
 }
 
-#embedded #toolbar #logo h2 a {
+#image #toolbar #logo h2 a {
   background: url("/images/embedded_logo_bg.png") no-repeat;
   display: block;
   height: 16px;
@@ -185,22 +77,22 @@ body {
   width: 23px;
 }
 
-#embedded #toolbar #logo h3 {
+#image #toolbar #logo h3 {
   display: none;
 }
 
-#embedded #toolbar #embed {
+#image #toolbar #embed {
   float: left;
   width: 300px;
 }
 
-#embedded #toolbar #embed label {
+#image #toolbar #embed label {
   float: left;
   display: block;
   margin: 5px 5px 0 0;
 }
 
-#embedded #toolbar #embed .input_text {
+#image #toolbar #embed .input_text {
   background: #fff;
   border: 1px solid #9f9f9f;
   -moz-border-radius: 2px;
@@ -217,25 +109,25 @@ body {
   width: 200px;
 }
 
-#embedded #toolbar #embed #clipboard {
+#image #toolbar #embed #clipboard {
   float: left;
   margin: 2px 0 0 5px;
 }
 
-#embedded #toolbar #embed #clipboard object {
+#image #toolbar #embed #clipboard object {
   display: block;
   height: 18px;
   width: 14px;
 }
 
-#embedded .close {
+#image .close {
   bottom: 7px;
   position: fixed;
   right: 10px;
   z-index: 99999;
 }
 
-#embedded .close a {
+#image .close a {
   background: url("/images/embedded_close_sprite.png") no-repeat 0 -57px;
   display: block;
   height: 19px;
